# open_repo

GOF_HW1/src/: SBomber.cpp  main.cpp
GOF_HW2/include/: Bomb.h  Commands.h  DynamicObject.h  GameObject.h  MyTools.h  SBomber.h  Timer.hpp
GOF_HW2/src/: Bomb.cpp  Commands.cpp  MyTools.cpp  SBomber.cpp  ScreenSingleton.cpp  main.cpp
GOF_HW3/include/: Iterator.h  SBomber.h  Timer.h
GOF_HW3/src/: Iterator.cpp  MyTools.cpp  SBomber.cpp  ScreenSingleton.cpp  main.cpp
GOF_HW4/include/: Crater.h  Ground.h  House.h  MyTools.h  SBomber.h  Timer.h
GOF_HW4/src/: Crater.cpp  Ground.cpp  MyTools.cpp  SBomber.cpp  ScreenSingleton.cpp  Tank.cpp  main.cpp
GOF_HW8/: Bomb.cpp  Bomb.h  GameObject.h  House.cpp  House.h  MyTools.cpp  MyTools.h  SBomber.cpp  SBomber.h  SBomberProject.cpp  Tank.cpp  Tank.h
HW4/: CMakeLists.txt  DigitalSignalErr.hpp  Insert_sorted.hpp
HW_1/: CMakeLists.txt  ReadMe.txt
HW_1/src/: main.cpp
HW_1/src/libs/: Person.cpp  Person.hpp  PhoneBook.cpp  PhoneBook.hpp  PhoneNumber.cpp  PhoneNumber.hpp
HW_2/: CMakeLists.txt
HW_3/: CMakeLists.txt
HW_4/: CMakeLists.txt  DigitalSignalErr.hpp  Insert_sorted.hpp  main.cpp
HW_5/: CMakeLists.txt  main.cpp
HW_6/: CMakeLists.txt  main.cpp
HW_7/: CMakeLists.txt  main.cpp
HW_8/: CMakeLists.txt  main.cpp
NET_HW_8/NETHW_8/TORRENT_CLIENT/: CMakeLists.txt  client.cpp
TTT/: AI.cpp  AI.hpp  Game.cpp  Game.hpp  GameField.cpp  GameField.hpp  Human.cpp  Human.hpp  Player.cpp  Player.hpp  main.cpp
applications/: main.cpp
net_1/: client.cpp  main.cpp
net_2/: interceptor.cpp  pcap_sniffer.cpp
(+63 files in other folders)
